# embedded-nrf24l01

./: .gitignore  Cargo.toml  README.md
src/: config.rs  lib.rs  mode.rs  payload.rs  rx.rs  tx.rs
