[package]
name = "embedded-nrf24l01"
version = "1.0.0"
authors = ["Astro <astro@spaceboyz.net>", "N8 <n8.wert.b@gmail.com"]
description = "A driver for NRF24L01(+) transceivers on embedded-hal platforms."
license = "Apache-2.0"
categories = ["embedded", "no-std", "hardware-support", "network-programming"]
keywords = ["driver", "embedded-hal", "wireless", "nrf", "nrf24l01"]
repository = "https://github.com/N8BWert/embedded-nrf24l01"
homepage = "https://github.com/N8BWert/embedded-nrf24l01"
edition = "2018"

[dependencies]
embedded-hal = "0.2.3"
bitfield = "0.14.0"
nb = "1.1.0"
